WebCore/dom/DOMImplementation.cpp
@@ -37,6 +37,7 @@
 #include "Image.h"
 #include "ImageDocument.h"
 #include "MediaList.h"
+#include "MIMETypeRegistry.h"
 #include "Page.h"
 #include "PluginDocument.h"
 #include "PlugInInfoStore.h"
@@ -329,12 +330,7 @@ bool DOMImplementation::isXMLMIMEType(const String& mimeType)
 
 bool DOMImplementation::isTextMIMEType(const String& mimeType)
 {
-    if (mimeType == "application/x-javascript" ||
-        (mimeType.startsWith("text/") && mimeType != "text/html" &&
-         mimeType != "text/xml" && mimeType != "text/xsl"))
-        return true;
-    
-    return false;
+    return MIMETypeRegistry::shouldTreatAsText(mimeType);
 }
 
 PassRefPtr<HTMLDocument> DOMImplementation::createHTMLDocument(const String& title)
